# pages_project

./: pyproject.toml
pages/: urls.py
pages_project/: settings.py
