[tool.poetry]
name = "pages-project"
version = "0.1.0"
description = ""
authors = ["Paco Ávila <favila@iesromerovargas.com>"]
readme = "README.md"
packages = [{include = "pages_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
